--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -26,7 +26,10 @@
     }
    ],
    "source": [
-    "100\n"
+    "# dataset is taken from Kaggle and downloaded from here:\n",
+    "# https://www.kaggle.com/datasets/thomasnibb/amsterdam-house-price-prediction\n",
+    "# license is CC0: Public Domain - can copy, modify, distribute and perform the work, \n",
+    "# even for commercial purposes, all without asking permission.\n"
    ]
   },
   {
