uv add pandas and data loaded to df

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -10,17 +10,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e285360d-904b-4cf0-a1dc-c6c7067d9b3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Lat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>920</td>\n",
+       "      <td>Ringdijk, Amsterdam</td>\n",
+       "      <td>1097 AE</td>\n",
+       "      <td>750000.0</td>\n",
+       "      <td>117</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.927757</td>\n",
+       "      <td>52.354173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>921</td>\n",
+       "      <td>Kleine Beerstraat 31, Amsterdam</td>\n",
+       "      <td>1033 CP</td>\n",
+       "      <td>350000.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.890612</td>\n",
+       "      <td>52.414587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>921</th>\n",
+       "      <td>922</td>\n",
+       "      <td>Stuyvesantstraat 33 II, Amsterdam</td>\n",
+       "      <td>1058 AK</td>\n",
+       "      <td>350000.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.856935</td>\n",
+       "      <td>52.363256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>922</th>\n",
+       "      <td>923</td>\n",
+       "      <td>John Blankensteinstraat 51, Amsterdam</td>\n",
+       "      <td>1095 MB</td>\n",
+       "      <td>599000.0</td>\n",
+       "      <td>113</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.965731</td>\n",
+       "      <td>52.375268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923</th>\n",
+       "      <td>924</td>\n",
+       "      <td>S. F. van Ossstraat 334, Amsterdam</td>\n",
+       "      <td>1068 JS</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.810678</td>\n",
+       "      <td>52.355493</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "100"
+       "     Unnamed: 0                                Address      Zip     Price  \\\n",
+       "919         920                    Ringdijk, Amsterdam  1097 AE  750000.0   \n",
+       "920         921        Kleine Beerstraat 31, Amsterdam  1033 CP  350000.0   \n",
+       "921         922      Stuyvesantstraat 33 II, Amsterdam  1058 AK  350000.0   \n",
+       "922         923  John Blankensteinstraat 51, Amsterdam  1095 MB  599000.0   \n",
+       "923         924     S. F. van Ossstraat 334, Amsterdam  1068 JS  300000.0   \n",
+       "\n",
+       "     Area  Room       Lon        Lat  \n",
+       "919   117     1  4.927757  52.354173  \n",
+       "920    72     3  4.890612  52.414587  \n",
+       "921    51     3  4.856935  52.363256  \n",
+       "922   113     4  4.965731  52.375268  \n",
+       "923    79     4  4.810678  52.355493  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +130,12 @@
     "# dataset is taken from Kaggle and downloaded from here:\n",
     "# https://www.kaggle.com/datasets/thomasnibb/amsterdam-house-price-prediction\n",
     "# license is CC0: Public Domain - can copy, modify, distribute and perform the work, \n",
-    "# even for commercial purposes, all without asking permission.\n"
+    "# even for commercial purposes, all without asking permission.\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"HousingPrices-Amsterdam-August-2021.csv\")\n",
+    "df.tail()"
    ]
   },
   {
