--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e285360d-904b-4cf0-a1dc-c6c7067d9b3d",
    "metadata": {},
    "outputs": [
@@ -35,93 +35,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Zip</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Area</th>\n",
-       "      <th>Room</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Lat</th>\n",
+       "      <th>address</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>price</th>\n",
+       "      <th>area</th>\n",
+       "      <th>room</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>919</th>\n",
-       "      <td>920</td>\n",
-       "      <td>Ringdijk, Amsterdam</td>\n",
-       "      <td>1097 AE</td>\n",
-       "      <td>750000.0</td>\n",
-       "      <td>117</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.927757</td>\n",
-       "      <td>52.354173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>920</th>\n",
-       "      <td>921</td>\n",
-       "      <td>Kleine Beerstraat 31, Amsterdam</td>\n",
-       "      <td>1033 CP</td>\n",
-       "      <td>350000.0</td>\n",
-       "      <td>72</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Blasiusstraat 8 2, Amsterdam</td>\n",
+       "      <td>1091 CR</td>\n",
+       "      <td>685000.0</td>\n",
+       "      <td>64</td>\n",
        "      <td>3</td>\n",
-       "      <td>4.890612</td>\n",
-       "      <td>52.414587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>921</th>\n",
-       "      <td>922</td>\n",
-       "      <td>Stuyvesantstraat 33 II, Amsterdam</td>\n",
-       "      <td>1058 AK</td>\n",
-       "      <td>350000.0</td>\n",
-       "      <td>51</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Kromme Leimuidenstraat 13 H, Amsterdam</td>\n",
+       "      <td>1059 EL</td>\n",
+       "      <td>475000.0</td>\n",
+       "      <td>60</td>\n",
        "      <td>3</td>\n",
-       "      <td>4.856935</td>\n",
-       "      <td>52.363256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>922</th>\n",
-       "      <td>923</td>\n",
-       "      <td>John Blankensteinstraat 51, Amsterdam</td>\n",
-       "      <td>1095 MB</td>\n",
-       "      <td>599000.0</td>\n",
-       "      <td>113</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Zaaiersweg 11 A, Amsterdam</td>\n",
+       "      <td>1097 SM</td>\n",
+       "      <td>850000.0</td>\n",
+       "      <td>109</td>\n",
        "      <td>4</td>\n",
-       "      <td>4.965731</td>\n",
-       "      <td>52.375268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>923</th>\n",
-       "      <td>924</td>\n",
-       "      <td>S. F. van Ossstraat 334, Amsterdam</td>\n",
-       "      <td>1068 JS</td>\n",
-       "      <td>300000.0</td>\n",
-       "      <td>79</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.810678</td>\n",
-       "      <td>52.355493</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Tenerifestraat 40, Amsterdam</td>\n",
+       "      <td>1060 TH</td>\n",
+       "      <td>580000.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Winterjanpad 21, Amsterdam</td>\n",
+       "      <td>1036 KN</td>\n",
+       "      <td>720000.0</td>\n",
+       "      <td>138</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0                                Address      Zip     Price  \\\n",
-       "919         920                    Ringdijk, Amsterdam  1097 AE  750000.0   \n",
-       "920         921        Kleine Beerstraat 31, Amsterdam  1033 CP  350000.0   \n",
-       "921         922      Stuyvesantstraat 33 II, Amsterdam  1058 AK  350000.0   \n",
-       "922         923  John Blankensteinstraat 51, Amsterdam  1095 MB  599000.0   \n",
-       "923         924     S. F. van Ossstraat 334, Amsterdam  1068 JS  300000.0   \n",
-       "\n",
-       "     Area  Room       Lon        Lat  \n",
-       "919   117     1  4.927757  52.354173  \n",
-       "920    72     3  4.890612  52.414587  \n",
-       "921    51     3  4.856935  52.363256  \n",
-       "922   113     4  4.965731  52.375268  \n",
-       "923    79     4  4.810678  52.355493  "
+       "                                  address      zip     price  area  room\n",
+       "0            Blasiusstraat 8 2, Amsterdam  1091 CR  685000.0    64     3\n",
+       "1  Kromme Leimuidenstraat 13 H, Amsterdam  1059 EL  475000.0    60     3\n",
+       "2              Zaaiersweg 11 A, Amsterdam  1097 SM  850000.0   109     4\n",
+       "3            Tenerifestraat 40, Amsterdam  1060 TH  580000.0   128     6\n",
+       "4              Winterjanpad 21, Amsterdam  1036 KN  720000.0   138     5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,9 +108,20 @@
     "# even for commercial purposes, all without asking permission.\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "df = pd.read_csv(\"HousingPrices-Amsterdam-August-2021.csv\")\n",
-    "df.tail()"
+    "\n",
+    "# STEP 1 - make columns look good:\n",
+    "df.columns = df.columns.str.lower()\n",
+    "\n",
+    "used_cols = [ 'address', 'zip',\t'price', 'area', 'room']\n",
+    "df = df[used_cols]\n",
+    "df.head()"
    ]
   },
   {
