added postcode mapping csv

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -5,12 +5,12 @@
    "id": "83432110-8444-49f7-a3fe-c356988b5cdd",
    "metadata": {},
    "source": [
-    "## Load and clean the data"
+    "## Load, enrich, augment and clean the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e285360d-904b-4cf0-a1dc-c6c7067d9b3d",
    "metadata": {},
    "outputs": [
@@ -35,68 +35,93 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>address</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>price</th>\n",
-       "      <th>area</th>\n",
-       "      <th>room</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Lat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Blasiusstraat 8 2, Amsterdam</td>\n",
        "      <td>1091 CR</td>\n",
        "      <td>685000.0</td>\n",
        "      <td>64</td>\n",
        "      <td>3</td>\n",
+       "      <td>4.907736</td>\n",
+       "      <td>52.356157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>Kromme Leimuidenstraat 13 H, Amsterdam</td>\n",
        "      <td>1059 EL</td>\n",
        "      <td>475000.0</td>\n",
        "      <td>60</td>\n",
        "      <td>3</td>\n",
+       "      <td>4.850476</td>\n",
+       "      <td>52.348586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>Zaaiersweg 11 A, Amsterdam</td>\n",
        "      <td>1097 SM</td>\n",
        "      <td>850000.0</td>\n",
        "      <td>109</td>\n",
        "      <td>4</td>\n",
+       "      <td>4.944774</td>\n",
+       "      <td>52.343782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>Tenerifestraat 40, Amsterdam</td>\n",
        "      <td>1060 TH</td>\n",
        "      <td>580000.0</td>\n",
        "      <td>128</td>\n",
        "      <td>6</td>\n",
+       "      <td>4.789928</td>\n",
+       "      <td>52.343712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>Winterjanpad 21, Amsterdam</td>\n",
        "      <td>1036 KN</td>\n",
        "      <td>720000.0</td>\n",
        "      <td>138</td>\n",
        "      <td>5</td>\n",
+       "      <td>4.902503</td>\n",
+       "      <td>52.410538</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  address      zip     price  area  room\n",
-       "0            Blasiusstraat 8 2, Amsterdam  1091 CR  685000.0    64     3\n",
-       "1  Kromme Leimuidenstraat 13 H, Amsterdam  1059 EL  475000.0    60     3\n",
-       "2              Zaaiersweg 11 A, Amsterdam  1097 SM  850000.0   109     4\n",
-       "3            Tenerifestraat 40, Amsterdam  1060 TH  580000.0   128     6\n",
-       "4              Winterjanpad 21, Amsterdam  1036 KN  720000.0   138     5"
+       "   Unnamed: 0                                 Address      Zip     Price  \\\n",
+       "0           1            Blasiusstraat 8 2, Amsterdam  1091 CR  685000.0   \n",
+       "1           2  Kromme Leimuidenstraat 13 H, Amsterdam  1059 EL  475000.0   \n",
+       "2           3              Zaaiersweg 11 A, Amsterdam  1097 SM  850000.0   \n",
+       "3           4            Tenerifestraat 40, Amsterdam  1060 TH  580000.0   \n",
+       "4           5              Winterjanpad 21, Amsterdam  1036 KN  720000.0   \n",
+       "\n",
+       "   Area  Room       Lon        Lat  \n",
+       "0    64     3  4.907736  52.356157  \n",
+       "1    60     3  4.850476  52.348586  \n",
+       "2   109     4  4.944774  52.343782  \n",
+       "3   128     6  4.789928  52.343712  \n",
+       "4   138     5  4.902503  52.410538  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,19 +140,329 @@
     "%matplotlib inline\n",
     "\n",
     "df = pd.read_csv(\"HousingPrices-Amsterdam-August-2021.csv\")\n",
-    "\n",
+    "df.head() # look of the original dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d73314fe-7288-47ae-a40c-b1cb4f2b4b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip</th>\n",
+       "      <th>address</th>\n",
+       "      <th>area</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1091 CR</td>\n",
+       "      <td>Blasiusstraat 8 2, Amsterdam</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3</td>\n",
+       "      <td>685000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1059 EL</td>\n",
+       "      <td>Kromme Leimuidenstraat 13 H, Amsterdam</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>475000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1097 SM</td>\n",
+       "      <td>Zaaiersweg 11 A, Amsterdam</td>\n",
+       "      <td>109</td>\n",
+       "      <td>4</td>\n",
+       "      <td>850000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1060 TH</td>\n",
+       "      <td>Tenerifestraat 40, Amsterdam</td>\n",
+       "      <td>128</td>\n",
+       "      <td>6</td>\n",
+       "      <td>580000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1036 KN</td>\n",
+       "      <td>Winterjanpad 21, Amsterdam</td>\n",
+       "      <td>138</td>\n",
+       "      <td>5</td>\n",
+       "      <td>720000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1051 AM</td>\n",
+       "      <td>De Wittenkade 134 I, Amsterdam</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>450000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1033 KM</td>\n",
+       "      <td>Pruimenstraat 18 B, Amsterdam</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3</td>\n",
+       "      <td>450000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1053 WL</td>\n",
+       "      <td>Da Costakade 32 II, Amsterdam</td>\n",
+       "      <td>80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>590000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1058 DG</td>\n",
+       "      <td>Postjeskade 41 2, Amsterdam</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>399000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1073 TM</td>\n",
+       "      <td>Van Ostadestraat 193 H, Amsterdam</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2</td>\n",
+       "      <td>300000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       zip                                 address  area  room     price\n",
+       "0  1091 CR            Blasiusstraat 8 2, Amsterdam    64     3  685000.0\n",
+       "1  1059 EL  Kromme Leimuidenstraat 13 H, Amsterdam    60     3  475000.0\n",
+       "2  1097 SM              Zaaiersweg 11 A, Amsterdam   109     4  850000.0\n",
+       "3  1060 TH            Tenerifestraat 40, Amsterdam   128     6  580000.0\n",
+       "4  1036 KN              Winterjanpad 21, Amsterdam   138     5  720000.0\n",
+       "5  1051 AM          De Wittenkade 134 I, Amsterdam    53     2  450000.0\n",
+       "6  1033 KM           Pruimenstraat 18 B, Amsterdam    87     3  450000.0\n",
+       "7  1053 WL           Da Costakade 32 II, Amsterdam    80     2  590000.0\n",
+       "8  1058 DG             Postjeskade 41 2, Amsterdam    49     3  399000.0\n",
+       "9  1073 TM       Van Ostadestraat 193 H, Amsterdam    33     2  300000.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# STEP 1 - make columns look good:\n",
     "df.columns = df.columns.str.lower()\n",
     "\n",
-    "used_cols = [ 'address', 'zip',\t'price', 'area', 'room']\n",
+    "# We will use only 4 columns for the start\n",
+    "used_cols = [ 'zip', 'address', 'area', 'room', 'price']\n",
     "df = df[used_cols]\n",
-    "df.head()"
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "902e4a87-fa53-43f1-8f8b-284cfdd1c5f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>924.000000</td>\n",
+       "      <td>924.000000</td>\n",
+       "      <td>9.200000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>95.952381</td>\n",
+       "      <td>3.571429</td>\n",
+       "      <td>6.220654e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>57.447436</td>\n",
+       "      <td>1.592332</td>\n",
+       "      <td>5.389942e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.750000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>60.750000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.500000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.670000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>7.000000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>623.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>5.950000e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             area        room         price\n",
+       "count  924.000000  924.000000  9.200000e+02\n",
+       "mean    95.952381    3.571429  6.220654e+05\n",
+       "std     57.447436    1.592332  5.389942e+05\n",
+       "min     21.000000    1.000000  1.750000e+05\n",
+       "25%     60.750000    3.000000  3.500000e+05\n",
+       "50%     83.000000    3.000000  4.670000e+05\n",
+       "75%    113.000000    4.000000  7.000000e+05\n",
+       "max    623.000000   14.000000  5.950000e+06"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6c36cbfb-bd88-4ac2-97ab-67b76a652f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "834"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.zip.nunique() # 834 - too many for grouping..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "14522207-03ab-4322-97f8-2c0300ee6f58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "919"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.address.nunique() # 919 - too many as well..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "91bcc879-63db-410a-93a1-460736b00270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# idea - we need to extract city districts (wijk in Dutch) based on the zip/street address\n",
+    "# collect a sentiment score for each district in range 1-10 using LLM - good or bad for living\n",
+    "# and add it as columns to our dataset - district and sentiment - as realtors often say - location, location, location...\n",
+    "\n",
+    "# I decided to drop GPS lat long columns - not to mess up with Google maps API for simplicity\n",
+    "# and used Amsterdam district names from here:\n",
+    "# https://data.europa.eu/data/datasets/22433-postcode-buurt-wijk?locale=da\n",
+    "\n",
+    "# idea 2 - in Amsterdam city district - wijk consists of subdistricts - buurt\n",
+    "# which consists of PC4 post codes (first 4 digits of zip column in our dataset)\n",
+    "# I will drop the street address for now and map buurt and wijk from downloaded CSV to PC4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d73314fe-7288-47ae-a40c-b1cb4f2b4b89",
+   "id": "994eb9f9-4170-43de-953e-ea1ecb9da0d0",
    "metadata": {},
    "outputs": [],
    "source": []
