--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "66e96e8b-d773-4a57-982e-d80cb053a122",
    "metadata": {},
    "outputs": [
@@ -852,131 +852,32 @@
        "      <td>52</td>\n",
        "      <td>Wijk Achtse Molen</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bordeauxlaan</td>\n",
-       "      <td>5627GW</td>\n",
-       "      <td>522</td>\n",
-       "      <td>Achtse Barrier-Gunterslaer</td>\n",
-       "      <td>52</td>\n",
-       "      <td>Wijk Achtse Molen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Borodinlaan</td>\n",
-       "      <td>5653HL</td>\n",
-       "      <td>721</td>\n",
-       "      <td>Genderdal</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Wijk Oud-Gestel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Borretpad</td>\n",
-       "      <td>5652GD</td>\n",
-       "      <td>622</td>\n",
-       "      <td>Het Ven</td>\n",
-       "      <td>62</td>\n",
-       "      <td>Wijk Halve Maan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bosboomstraat</td>\n",
-       "      <td>5613KE</td>\n",
-       "      <td>312</td>\n",
-       "      <td>Lakerlopen</td>\n",
-       "      <td>31</td>\n",
-       "      <td>Wijk De Laak</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Boschdijk</td>\n",
-       "      <td>5612AM</td>\n",
-       "      <td>412</td>\n",
-       "      <td>Hemelrijken</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Wijk Oud-Woensel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Boschdijk</td>\n",
-       "      <td>5612HC</td>\n",
-       "      <td>411</td>\n",
-       "      <td>Limbeek-Noord</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Wijk Oud-Woensel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Boschdijk</td>\n",
-       "      <td>5612HG</td>\n",
-       "      <td>412</td>\n",
-       "      <td>Hemelrijken</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Wijk Oud-Woensel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Boschdijk</td>\n",
-       "      <td>5621JA</td>\n",
-       "      <td>421</td>\n",
-       "      <td>Woensel-West</td>\n",
-       "      <td>42</td>\n",
-       "      <td>Wijk Erp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Boschdijk</td>\n",
-       "      <td>5621JB</td>\n",
-       "      <td>421</td>\n",
-       "      <td>Woensel-West</td>\n",
-       "      <td>42</td>\n",
-       "      <td>Wijk Erp</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      straatnaam postcode6  buurtcode                   buurtnaam  wijkcode  \\\n",
-       "0   Bordeauxlaan    5627GV        522  Achtse Barrier-Gunterslaer        52   \n",
-       "1   Bordeauxlaan    5627GW        522  Achtse Barrier-Gunterslaer        52   \n",
-       "2    Borodinlaan    5653HL        721                   Genderdal        72   \n",
-       "3      Borretpad    5652GD        622                     Het Ven        62   \n",
-       "4  Bosboomstraat    5613KE        312                  Lakerlopen        31   \n",
-       "5      Boschdijk    5612AM        412                 Hemelrijken        41   \n",
-       "6      Boschdijk    5612HC        411               Limbeek-Noord        41   \n",
-       "7      Boschdijk    5612HG        412                 Hemelrijken        41   \n",
-       "8      Boschdijk    5621JA        421                Woensel-West        42   \n",
-       "9      Boschdijk    5621JB        421                Woensel-West        42   \n",
+       "     straatnaam postcode6  buurtcode                   buurtnaam  wijkcode  \\\n",
+       "0  Bordeauxlaan    5627GV        522  Achtse Barrier-Gunterslaer        52   \n",
        "\n",
        "            wijknaam  \n",
-       "0  Wijk Achtse Molen  \n",
-       "1  Wijk Achtse Molen  \n",
-       "2    Wijk Oud-Gestel  \n",
-       "3    Wijk Halve Maan  \n",
-       "4       Wijk De Laak  \n",
-       "5   Wijk Oud-Woensel  \n",
-       "6   Wijk Oud-Woensel  \n",
-       "7   Wijk Oud-Woensel  \n",
-       "8           Wijk Erp  \n",
-       "9           Wijk Erp  "
+       "0  Wijk Achtse Molen  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# clean up our mappings dataframe and prepare for merging\n",
-    "mappings = mappings[['straatnaam', 'postcode6', 'buurtcode',\t'buurtnaam', 'wijkcode', 'wijknaam']]\n",
-    "mappings.head(10)\n"
+    "mappings = mappings[['straatnaam', 'postcode6', 'buurtcode', 'buurtnaam', 'wijkcode', 'wijknaam']]\n",
+    "mappings.head(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "2c8557e8-c020-4b91-bc7d-1d952309058c",
    "metadata": {},
    "outputs": [
@@ -1007,6 +908,11 @@
        "      <th>room</th>\n",
        "      <th>price</th>\n",
        "      <th>postcode6</th>\n",
+       "      <th>straatnaam</th>\n",
+       "      <th>buurtcode</th>\n",
+       "      <th>buurtnaam</th>\n",
+       "      <th>wijkcode</th>\n",
+       "      <th>wijknaam</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1018,119 +924,25 @@
        "      <td>3</td>\n",
        "      <td>685000.0</td>\n",
        "      <td>1091CR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1059 EL</td>\n",
-       "      <td>Kromme Leimuidenstraat 13 H, Amsterdam</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3</td>\n",
-       "      <td>475000.0</td>\n",
-       "      <td>1059EL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1097 SM</td>\n",
-       "      <td>Zaaiersweg 11 A, Amsterdam</td>\n",
-       "      <td>109</td>\n",
-       "      <td>4</td>\n",
-       "      <td>850000.0</td>\n",
-       "      <td>1097SM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1060 TH</td>\n",
-       "      <td>Tenerifestraat 40, Amsterdam</td>\n",
-       "      <td>128</td>\n",
-       "      <td>6</td>\n",
-       "      <td>580000.0</td>\n",
-       "      <td>1060TH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1036 KN</td>\n",
-       "      <td>Winterjanpad 21, Amsterdam</td>\n",
-       "      <td>138</td>\n",
-       "      <td>5</td>\n",
-       "      <td>720000.0</td>\n",
-       "      <td>1036KN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1051 AM</td>\n",
-       "      <td>De Wittenkade 134 I, Amsterdam</td>\n",
-       "      <td>53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>1051AM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1033 KM</td>\n",
-       "      <td>Pruimenstraat 18 B, Amsterdam</td>\n",
-       "      <td>87</td>\n",
-       "      <td>3</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>1033KM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1053 WL</td>\n",
-       "      <td>Da Costakade 32 II, Amsterdam</td>\n",
-       "      <td>80</td>\n",
-       "      <td>2</td>\n",
-       "      <td>590000.0</td>\n",
-       "      <td>1053WL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1058 DG</td>\n",
-       "      <td>Postjeskade 41 2, Amsterdam</td>\n",
-       "      <td>49</td>\n",
-       "      <td>3</td>\n",
-       "      <td>399000.0</td>\n",
-       "      <td>1058DG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1073 TM</td>\n",
-       "      <td>Van Ostadestraat 193 H, Amsterdam</td>\n",
-       "      <td>33</td>\n",
-       "      <td>2</td>\n",
-       "      <td>300000.0</td>\n",
-       "      <td>1073TM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       zip                                 address  area  room     price  \\\n",
-       "0  1091 CR            Blasiusstraat 8 2, Amsterdam    64     3  685000.0   \n",
-       "1  1059 EL  Kromme Leimuidenstraat 13 H, Amsterdam    60     3  475000.0   \n",
-       "2  1097 SM              Zaaiersweg 11 A, Amsterdam   109     4  850000.0   \n",
-       "3  1060 TH            Tenerifestraat 40, Amsterdam   128     6  580000.0   \n",
-       "4  1036 KN              Winterjanpad 21, Amsterdam   138     5  720000.0   \n",
-       "5  1051 AM          De Wittenkade 134 I, Amsterdam    53     2  450000.0   \n",
-       "6  1033 KM           Pruimenstraat 18 B, Amsterdam    87     3  450000.0   \n",
-       "7  1053 WL           Da Costakade 32 II, Amsterdam    80     2  590000.0   \n",
-       "8  1058 DG             Postjeskade 41 2, Amsterdam    49     3  399000.0   \n",
-       "9  1073 TM       Van Ostadestraat 193 H, Amsterdam    33     2  300000.0   \n",
+       "       zip                       address  area  room     price postcode6  \\\n",
+       "0  1091 CR  Blasiusstraat 8 2, Amsterdam    64     3  685000.0    1091CR   \n",
        "\n",
-       "  postcode6  \n",
-       "0    1091CR  \n",
-       "1    1059EL  \n",
-       "2    1097SM  \n",
-       "3    1060TH  \n",
-       "4    1036KN  \n",
-       "5    1051AM  \n",
-       "6    1033KM  \n",
-       "7    1053WL  \n",
-       "8    1058DG  \n",
-       "9    1073TM  "
+       "  straatnaam  buurtcode buurtnaam  wijkcode wijknaam  \n",
+       "0        NaN        NaN       NaN       NaN      NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,13 +950,56 @@
    "source": [
     "# merge 2 dataftames\n",
     "# df = df.merge(mappings, on='postcode6')\n",
-    "df.head(10)"
+    "# df.head(1)\n",
+    "df_merged = df.merge(mappings, on=\"postcode6\", how=\"left\")\n",
+    "df_merged.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b22d020e-9d7b-4af6-b751-c2638b0c1bb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1091CR', '1059EL', '1097SM', '1060TH', '1036KN', '1051AM', '1033KM', '1053WL', '1058DG', '1073TM']\n",
+      "['5627GV', '5627GW', '5653HL', '5652GD', '5613KE', '5612AM', '5612HC', '5612HG', '5621JA', '5621JB']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['postcode6'].head(10).tolist())\n",
+    "print(mappings['postcode6'].head(10).tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "97f09bee-6179-49a2-ad50-eabd154e9e3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(df['postcode6']).intersection(set(mappings['postcode6']))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b22d020e-9d7b-4af6-b751-c2638b0c1bb7",
+   "id": "19b18928-40d9-4b84-9f0d-a48bfc4071a5",
    "metadata": {},
    "outputs": [],
    "source": []
